package baseline;

public class Solution44 {
    public static void main(String[] args) {
        DataReader dr =new DataReader();
        dr.printQueryResults();
    }
}
