@startuml
'https://plantuml.com/sequence-diagram

class Solution44{
+main()
}
class DataReader{
-List<Map<?,?> data
+getUserQuery()
-jsonToList()
+printQueryResults()
}
class Products{
-Product[] products
+getProducts()
+setProducts()
}
class Product{
-String name
-float price
-short quantity
+getName()
+getPrice()
+getQuantity()
}


Solution44 -- DataReader
Product <|-- Products
Products <|-- DataReader
@enduml